--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
-    "start": "NODE_ENV=production node ./node_modules/next/dist/bin/next start -p ${PORT:-8080}",
+    "start": "next build && next start -p ${PORT:-8080}",
     "lint": "next lint"
   },
   "dependencies": {
