Fix Azure deployment: resolve 'next: not found' error
- Updated package.json start script to use custom server.js
- Enhanced server.js with Azure-specific Next.js binary detection
- Added comprehensive startup logging and error handling
- Optimized next.config.ts for Azure App Service compatibility
- Updated startup.sh with detailed debugging and PATH setup
- Enhanced web.config with proper iisnode configuration
- Added .deployment and iisnode.yml for Azure-specific settings

This resolves the 'sh: 1: next: not found' error by:
1. Using custom Node.js server instead of npx commands
2. Detecting Next.js binary in Azure's unique node_modules paths
3. Handling build process programmatically
4. Setting proper environment variables for Azure container

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
-    "start": "npx next build && npx next start -p ${PORT:-8080}",
+    "start": "node server.js",
+    "start:azure": "npm run build && node server.js",
     "lint": "next lint"
   },
   "dependencies": {
