--- a/web.config
+++ b/web.config
@@ -28,6 +28,25 @@
       </requestFiltering>
     </security>
     <httpErrors existingResponse="PassThrough" />
-    <iisnode watchedFiles="web.config;*.js"/>
+    <iisnode
+      watchedFiles="web.config;*.js"
+      loggingEnabled="true"
+      logDirectory="iisnode"
+      debuggingEnabled="false"
+      nodeProcessCountPerApplication="1"
+      maxConcurrentRequestsPerProcess="1024"
+      maxNamedPipeConnectionRetry="3"
+      namedPipeConnectionRetryDelay="2000"
+      maxNamedPipeConnectionPoolSize="512"
+      maxNamedPipePooledConnectionAge="30000"
+      asyncCompletionThreadCount="0"
+      initialRequestBufferSize="4096"
+      maxRequestBufferSize="65536"
+      uncFileChangesPollingInterval="5000"
+      gracefulShutdownTimeout="60000"
+      enableXFF="false"
+      promoteServerVars=""
+      configOverrides="iisnode.yml"
+    />
   </system.webServer>
 </configuration>
