--- a/package.json
+++ b/package.json
@@ -4,17 +4,27 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "node server.js",
     "start:azure": "npm run build && node server.js",
+    "postinstall": "prisma generate",
+    "prisma:generate": "prisma generate",
+    "prisma:deploy": "prisma migrate deploy",
+    "prisma:reset": "prisma migrate reset --force",
+    "deploy:azure": "node scripts/deploy-azure.js",
+    "test:db": "node scripts/test-db-connection.js",
+    "health:check": "curl -f http://localhost:8080/api/health || exit 1",
     "lint": "next lint"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.25.4",
+    "@prisma/client": "^6.12.0",
     "@vapi-ai/web": "^2.3.8",
     "dequal": "^2.0.3",
+    "dotenv": "^17.2.1",
     "googleapis": "^153.0.0",
     "next": "15.4.2",
+    "prisma": "^6.12.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "swr": "^2.2.5",
@@ -27,6 +37,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/uuid": "^10.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.4.2",
     "tailwindcss": "^4",
