--- a/package.json
+++ b/package.json
@@ -7,14 +7,22 @@
     "build": "next build",
     "start": "node server.js",
     "start:azure": "npm run build && node server.js",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:generate": "prisma generate",
+    "db:push": "prisma db push",
+    "db:setup": "npm run db:generate && npm run db:push",
+    "deploy:azure": "npm run db:setup && npm run build",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.25.4",
+    "@prisma/client": "^6.12.0",
     "@vapi-ai/web": "^2.3.8",
     "dequal": "^2.0.3",
+    "dotenv": "^17.2.1",
     "googleapis": "^153.0.0",
     "next": "15.4.2",
+    "prisma": "^6.12.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "swr": "^2.2.5",
@@ -27,6 +35,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/uuid": "^10.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.4.2",
     "tailwindcss": "^4",
