--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.25.4",
+    "@prisma/client": "^6.13.0",
     "@vapi-ai/web": "^2.3.8",
     "dequal": "^2.0.3",
+    "dotenv": "^17.2.1",
     "googleapis": "^153.0.0",
     "next": "15.4.2",
     "react": "19.1.0",
@@ -27,8 +29,10 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/uuid": "^10.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.4.2",
+    "prisma": "^6.13.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
